# npyz-viewer

./: Cargo.toml  README.md  npy2npz.py  npyz2txt.py  npyzviewer.py
scripts/: install_linux_npyz_viewer.sh  install_macos_npyz_viewer.sh  install_windows_npyz_viewer.ps1
src/: main.rs
